--- a/public/css/main.css
+++ b/public/css/main.css
@@ -709,6 +709,14 @@ video {
   width: 33.333333%;
 }
 
+.w-64 {
+  width: 16rem;
+}
+
+.w-80 {
+  width: 20rem;
+}
+
 .max-w-xl {
   max-width: 36rem;
 }
@@ -745,6 +753,10 @@ video {
 
 .justify-between {
   justify-content: space-between;
+}
+
+.justify-around {
+  justify-content: space-around;
 }
 
 .space-y-2 > :not([hidden]) ~ :not([hidden]) {
@@ -1276,6 +1288,11 @@ body {
 }
 
 @media (min-width: 768px) {
+  .md\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   .md\:mt-2 {
     margin-top: 0.5rem;
   }
@@ -1347,6 +1364,19 @@ body {
   .md\:w-max {
     width: -moz-max-content;
     width: max-content;
+  }
+
+  .md\:w-80 {
+    width: 20rem;
+  }
+
+  .md\:w-64 {
+    width: 16rem;
+  }
+
+  .md\:w-fit {
+    width: -moz-fit-content;
+    width: fit-content;
   }
 
   .md\:max-w-2xl {
